PROJ-34 : ajout documentation Jira complète